--- a/profil.html
+++ b/profil.html
@@ -21,11 +21,76 @@
   <body>
     <header></header>
     <main>
-      <h1 class="d-none d-lg-block">Annonces</h1>
-      <div class="d-lg-none d-flex justify-content-center my-3">
-        <button class="btn btn-action">CRÉER UNE ANNONCE</button>
+      <div class="container-fluid p-0 mobile d-md-none align-items-center justify-content-center it">
+        <img src="../CollabGarden/public/assets/img/profil/bgProfil.jpg" class="bgProfil img-fluid">
+        <div class="row">
+          <div class="col-4">
+            <img src="public/assets/img/profil/pasMal.png" class="p_profil ms-3">
+          </div>
+          <div class="col-6 py-1 mt-2">
+            <button class="btn btn-mobile-follow d-flex align-items-center justify-content-center"><img
+                src="public/assets/img/profil/follow.png" class="w-25 pe-1" alt="" />
+              <p class="m-0">SUIVRE</p>
+            </button>
+          </div>
+          <div class="col-2 py-1 mt-3">
+            <img src="public/assets/img/profil/plus.png" class="plus" alt="" />
+          </div>
+        </div>
+
+        <div class="mt-3 ms-3">
+          <h2>Colette</h2>
+          <div class="d-flex">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <div>5/5</div>
+          </div>
+          <div class="mt-2">Membre depuis le 12/03/2024</div>
+          <div>Amiens, 80000</div>
+          <div class="info">Passionné par la plante depuis ma tendre jeuneusse.</div>
+
+        </div>
       </div>
+
+
+      <div class="container desktop d-none d-md-block align-items-center justify-content-center">
+        <div class="box_info">
+          <div class="row">
+            <div class="col-3 ms-3">
+              <img src="public/assets/img/profil/pasMal.png" class="p_profil_desktop ms-3 my-3">
+            </div>
+            <div class="col-6 py-1 mt-2">
+              <button class="py-1 ms-1 btn btn-mobile-follow d-flex align-items-center justify-content-center"><img
+                  src="public/assets/img/profil/follow.png" class="w-25 pe-1" alt="" />
+                <p class="m-0">SUIVRE</p>
+              </button>
+              <div class="ms-5">
+                <h2>Colette</h2>
+                <div class="d-flex">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <div>5/5</div>
+                </div>
+                <div class="mt-">Membre depuis le 12/03/2024</div>
+                <div>Amiens, 80000</div>
+                <div class="info f">Passionné par la plante depuis ma tendre jeuneusse.</div>
+              </div>
+            </div>
+            <div class="col-2 py-1 mt-3">
+              <img src="public/assets/img/profil/plus.png" class="plus" alt="options" />
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="container filters">
+        <div class="mt-2"></div>
         <form action="">
           <div class="d-flex justify-content-between">
             <select
@@ -95,7 +160,7 @@
         </form>
         <!-- Message de résultat de recherche -->
         <div class="mt-2">
-          <p>4 annonce(s) correspondant à votre recherche:</p>
+
         </div>
       </div>
       <div id="announcements" class="container">
@@ -121,9 +186,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="container d-flex gap-3 bg-secondary-subtle py-2 rounded-2"
-          >
+          <div class="container d-flex gap-3 bg-secondary-subtle py-2 rounded-2 mt-2">
             <img
               src="./public/assets/img/plantes/lilas.jpg"
               alt=""
